--- a/demo/website_practice/Tmall/tmall.html
+++ b/demo/website_practice/Tmall/tmall.html
@@ -91,50 +91,19 @@
               <div>
                 <section>热点推荐 Hot</section>
                 <section>
-                  <a href="javascript:void(0);">天猫超市</a>
-                  <a href="javascript:void(0);">喵鲜生</a>
-                  <a href="javascript:void(0);">科技新品</a>
-                  <a href="javascript:void(0);">女装新品</a>
-                  <a href="javascript:void(0);">酷玩街</a>
-                  <a href="javascript:void(0);">内衣新品</a>
-                  <a href="javascript:void(0);">试美妆</a>
-                  <a href="javascript:void(0);">运动新品</a>
-                  <a href="javascript:void(0);">时尚先生</a>
-                  <a href="javascript:void(0);">精明妈咪</a>
-                  <a href="javascript:void(0);">吃乐会</a>
-                  <a href="javascript:void(0);">企业采购</a>
-                  <a href="javascript:void(0);">会员积分</a>
-                  <a href="javascript:void(0);">天猫国际</a>
-                  <a href="javascript:void(0);">品质频道</a>
+                  <a :href="href" v-for="navName in siteNav[0]">{{navName}}</a>
                 </section>
               </div>
               <div>
                 <section>行业市场 Market</section>
                 <section>
-                  <a href="javascript:void(0);">美妆</a>
-                  <a href="javascript:void(0);">电器</a>
-                  <a href="javascript:void(0);">女装</a>
-                  <a href="javascript:void(0);">男装</a>
-                  <a href="javascript:void(0);">女鞋</a>
-                  <a href="javascript:void(0);">男鞋</a>
-                  <a href="javascript:void(0);">内衣</a>
-                  <a href="javascript:void(0);">箱包</a>
-                  <a href="javascript:void(0);">运动</a>
-                  <a href="javascript:void(0);">母婴</a>
-                  <a href="javascript:void(0);">家装</a>
-                  <a href="javascript:void(0);">医药</a>
-                  <a href="javascript:void(0);">食品</a>
-                  <a href="javascript:void(0);">配饰</a>
-                  <a href="javascript:void(0);">汽车</a>
+                  <a :href="href" v-for="navName in siteNav[1]">{{navName}}</a>
                 </section>
               </div>
               <div>
                 <section>服务指南 Help</section>
                 <section>
-                  <a href="javascript:void(0);">帮助中心</a>
-                  <a href="javascript:void(0);">品质保障</a>
-                  <a href="javascript:void(0);">特色服务</a>
-                  <a href="javascript:void(0);">7天退换货</a>
+                  <a :href="href" v-for="navName in siteNav[2]">{{navName}}</a>
                 </section>
               </div>
             </div>
@@ -157,15 +126,7 @@
         <input class="search-btn" type="button" value="搜索">
       </div>
       <div class="search-suggestion">
-        <a href="javascript:void(0);">针织衫</a>
-        <a href="javascript:void(0);">连衣裙</a>
-        <a href="javascript:void(0);">四件套</a>
-        <a href="javascript:void(0);">摄像头</a>
-        <a href="javascript:void(0);">客厅灯</a>
-        <a href="javascript:void(0);">口红</a>
-        <a href="javascript:void(0);">手机</a>
-        <a href="javascript:void(0);">运动鞋</a>
-        <a href="javascript:void(0);">牛奶</a>
+        <a :href="href" v-for="sg in searchSuggestion">{{sg}}</a>
       </div>
     </div>
     <div class="head-nav">
@@ -183,14 +144,7 @@
           </a>
         </div>
         <div>
-          <a href="javascript:void(0);">天猫会员</a>
-          <a href="javascript:void(0);">电器城</a>
-          <a href="javascript:void(0);">喵鲜生</a>
-          <a href="javascript:void(0);">医药馆</a>
-          <a href="javascript:void(0);">营业厅</a>
-          <a href="javascript:void(0);">魅力惠</a>
-          <a href="javascript:void(0);">飞猪旅行</a>
-          <a href="javascript:void(0);">苏宁易购</a>
+          <a :href="href" v-for="hn in headNav">{{hn}}</a>
         </div>
       </div>
     </div>
@@ -218,122 +172,49 @@
                 <div class="csl">
                   <div>当季流行</div>
                   <div class="csl-1">
-                    <categroy-list-a v-for="name in lists1.length" :name="name" :href="href"></categroy-list-a>
-                    <!-- <a href="javascript:void(0);">女装新品</a>
-                    <a href="javascript:void(0);">商场同款</a>
-                    <a href="javascript:void(0);">仙女连衣裙</a>
-                    <a href="javascript:void(0);">T恤</a>
-                    <a href="javascript:void(0);">衬衫</a>
-                    <a href="javascript:void(0);">时髦外套</a>
-                    <a href="javascript:void(0);">休闲裤</a>
-                    <a href="javascript:void(0);">牛仔裤</a>
-                    <a href="javascript:void(0);">无痕文胸</a>
-                    <a href="javascript:void(0);">运动文胸</a>
-                    <a href="javascript:void(0);">潮流家居服</a>
-                    <a href="javascript:void(0);">百搭船袜</a> -->
+                   <a :href="href" v-for="cl in catelist[0]">{{cl}}</a>
                   </div>
                 </div>
                 <div class="csl">
                   <div>精选上装</div>
                   <div class="csl-1">
-                    <a href="javascript:void(0);">毛呢外套</a>
-                    <a href="javascript:void(0);">羽绒服</a>
-                    <a href="javascript:void(0);">棉服</a>
-                    <a href="javascript:void(0);">丝绒卫衣</a>
-                    <a href="javascript:void(0);">毛针织衫</a>
-                    <a href="javascript:void(0);">皮毛一体</a>
-                    <a href="javascript:void(0);">皮草毛衣</a>
-                    <a href="javascript:void(0);">衬衫</a>
-                    <a href="javascript:void(0);">卫衣</a>
-                    <a href="javascript:void(0);">针织衫</a>
-                    <a href="javascript:void(0);">T恤</a>
-                    <a href="javascript:void(0);">短外套</a>
-                    <a href="javascript:void(0);">小西装</a>
-                    <a href="javascript:void(0);">风衣</a>
+                    <a :href="href" v-for="cl in catelist[1]">{{cl}}</a>
                   </div>
                 </div>
                 <div class="csl">
                   <div>浪漫裙装</div>
                   <div class="csl-1">
-                    <a href="javascript:void(0);">连衣裙</a>
-                    <a href="javascript:void(0);">半身裙</a>
-                    <a href="javascript:void(0);">A字裙</a>
-                    <a href="javascript:void(0);">荷叶边裙</a>
-                    <a href="javascript:void(0);">大摆裙</a>
-                    <a href="javascript:void(0);">包臀裙</a>
-                    <a href="javascript:void(0);">百褶裙</a>
-                    <a href="javascript:void(0);">长袖连衣裙</a>
-                    <a href="javascript:void(0);">棉麻连衣裙</a>
-                    <a href="javascript:void(0);">牛仔裙</a>
-                    <a href="javascript:void(0);">蕾丝连衣裙</a>
-                    <a href="javascript:void(0);">真丝连衣裙</a>
-                    <a href="javascript:void(0);">印花连衣裙</a>
+                    <a :href="href" v-for="cl in catelist[2]">{{cl}}</a>
                   </div>
                 </div>
                 <div class="csl">
                   <div>女士下装</div>
                   <div class="csl-1">
-                    <a href="javascript:void(0);">休闲裤</a>
-                    <a href="javascript:void(0);">阔腿裤</a>
-                    <a href="javascript:void(0);">牛仔裤</a>
-                    <a href="javascript:void(0);">打底裤</a>
-                    <a href="javascript:void(0);">开叉运动裤</a>
-                    <a href="javascript:void(0);">哈伦裤</a>
-                    <a href="javascript:void(0);">背带裤</a>
-                    <a href="javascript:void(0);">小脚裤</a>
-                    <a href="javascript:void(0);">西装裤</a>
-                    <a href="javascript:void(0);">短裤</a>
+                    <a :href="href" v-for="cl in catelist[3]">{{cl}}</a>
                   </div>
                 </div>
                 <div class="csl">
                   <div>特色女装</div>
                   <div class="csl-1">
-                    <a href="javascript:void(0);">时尚套装</a>
-                    <a href="javascript:void(0);">休闲套装</a>
-                    <a href="javascript:void(0);">日系女装</a>
-                    <a href="javascript:void(0);">精选妈妈装</a>
-                    <a href="javascript:void(0);">大码女装</a>
-                    <a href="javascript:void(0);">职业套装</a>
-                    <a href="javascript:void(0);">优雅旗袍</a>
-                    <a href="javascript:void(0);">精致礼服</a>
-                    <a href="javascript:void(0);">婚纱</a>
-                    <a href="javascript:void(0);">唐装</a>
-                    <a href="javascript:void(0);">小码女装</a>
+                    <a :href="href" v-for="cl in catelist[4]">{{cl}}</a>
                   </div>
                 </div>
                 <div class="csl">
                   <div>文胸塑身</div>
                   <div class="csl-1">
-                    <a href="javascript:void(0);">光面文胸</a>
-                    <a href="javascript:void(0);">运动文胸</a>
-                    <a href="javascript:void(0);">美背文胸</a>
-                    <a href="javascript:void(0);">聚拢文胸</a>
-                    <a href="javascript:void(0);">大杯文胸</a>
-                    <a href="javascript:void(0);">轻薄塑身</a>
+                    <a :href="href" v-for="cl in catelist[5]">{{cl}}</a>
                   </div>
                 </div>
                 <div class="csl">
                   <div>家居服</div>
                   <div class="csl-1">
-                    <a href="javascript:void(0);">春夏家居服</a>
-                    <a href="javascript:void(0);">纯棉家居服</a>
-                    <a href="javascript:void(0);">莫代尔家居服</a>
-                    <a href="javascript:void(0);">真丝家居服</a>
-                    <a href="javascript:void(0);">春夏睡裙</a>
-                    <a href="javascript:void(0);">男士家居服</a>
-                    <a href="javascript:void(0);">情侣家居服</a>
-                    <a href="javascript:void(0);">性感睡裙</a>
+                    <a :href="href" v-for="cl in catelist[6]">{{cl}}</a>
                   </div>
                 </div>
                 <div class="csl">
                   <div>内裤背心</div>
                   <div class="csl-1">
-                    <a href="javascript:void(0);">男士内裤</a>
-                    <a href="javascript:void(0);">女式内裤</a>
-                    <a href="javascript:void(0);">男士内裤多条装</a>
-                    <a href="javascript:void(0);">女士内裤多条装</a>
-                    <a href="javascript:void(0);">莫代尔内裤</a>
-                    <a href="javascript:void(0);">吊带背心</a>
+                    <a :href="href" v-for="cl in catelist[7]">{{cl}}</a>
                   </div>
                 </div>
               </div>
@@ -365,7 +246,70 @@
               </span>
             </div>
             <div class="cate-sub">
-                <div class="cs-left"></div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>当季流行</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[8]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>男士外套</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[9]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>男士内搭</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[10]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>男士裤装</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[11]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>特色男装</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[12]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>运动鞋</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[13]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>运动服</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[14]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="cs-left">
+                    <div class="csl">
+                        <div>户外鞋服</div>
+                        <div class="csl-1">
+                         <a :href="href" v-for="cl in catelist[15]">{{cl}}</a>
+                        </div>
+                      </div>
+                </div>
                 <div class="cs-right">
                   <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1QgL7LFXXXXboXFXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
                   <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB18HHTLFXXXXaJaXXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
